fix: stream notifications without cdc
